feat(ui): add window icon and expand gitignore rules
- Add official application icon (app_icon.ico) and load it in main.py.
- Update .gitignore with comprehensive Python, IDE, and build patterns.
- Ensure cross-platform compatibility by checking icon path existence.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
-.venv/
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+
+# Environments
+.venv/
+venv/
+ENV/
+
+# PyInstaller / Distribution
+# These are generated when you build your .exe
+build/
+dist/
+*.spec
+
+# Logs and temporary files
+*.log
+.pytest_cache/
+.vscode/
+.idea/
+
+# Local configuration files
+# (If you create a .env or local_config.py later, keep them out of Git)
+.env
+config_local.json
+
+# OS generated files
+.DS_Store
+Thumbs.db
